--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             <!-- Header Section -->
             <div class="text-center mb-8">
                 <h1 class="text-3xl md:text-4xl font-bold text-indigo-400">PDF Color Inverter</h1>
+                <h2 class="text-3xl md:text-4xl font-bold text-indigo-400">
+  <a href="https://sp007-sun.github.io/pdfx/">Version 2 is live (advanced)</a>
+</h2>
+
                 <p class="text-gray-400 mt-2">Hey Student ! Use this tool to flip your notes from a black background to white for easy printing. Perfect for your Study !</p>
             </div>
 
