--- a/index.html
+++ b/index.html
@@ -58,9 +58,16 @@
             <!-- Header Section -->
             <div class="text-center mb-8">
                 <h1 class="text-3xl md:text-4xl font-bold text-indigo-400">PDF Color Inverter</h1>
-                <h2 class="text-3xl md:text-4xl font-bold text-indigo-400">
-  <a href="https://sp007-sun.github.io/pdfx/">Version 2 is live (advanced)</a>
+               <h2 class="text-3xl md:text-4xl font-extrabold">
+  <a href="https://sp007-sun.github.io/pdfx/" 
+     class="text-transparent bg-clip-text bg-gradient-to-r from-pink-500 via-yellow-400 to-red-500 
+            hover:from-yellow-400 hover:via-pink-500 hover:to-purple-600 
+            transition-all duration-500 ease-in-out 
+            animate-pulse drop-shadow-lg">
+    🚀 Version 2 (ADV) is Live – Click Here! 🎉
+  </a>
 </h2>
+
 
                 <p class="text-gray-400 mt-2">Hey Student ! Use this tool to flip your notes from a black background to white for easy printing. Perfect for your Study !</p>
             </div>
